name:                saltine
version:             0.1.0.2
synopsis:            Cryptography that's easy to digest (NaCl/libsodium bindings).
description:

  /NaCl/ (pronounced \"salt\") is a new easy-to-use high-speed software
  library for network communication, encryption, decryption,
  signatures, etc. NaCl's goal is to provide all of the core
  operations needed to build higher-level cryptographic tools.
  .
  <http://nacl.cr.yp.to/>
  .
  /Sodium/ is a portable, cross-compilable, installable, packageable
  crypto library based on NaCl, with a compatible API.
  .
  <https://github.com/jedisct1/libsodium>
  .
  /Saltine/ is a Haskell binding to the NaCl primitives going through
  Sodium for build convenience and, eventually, portability.

license:             MIT
license-file:        LICENSE
author:              Joseph Abrahamson
maintainer:          Max Amanshauser <max@lambdalifting.org>
bug-reports:         http://github.com/tel/saltine/issues
copyright:           Copyright (c) Joseph Abrahamson 2013
category:            Cryptography
build-type:          Simple
cabal-version:       >=1.10
tested-with:         GHC==7.8.4, GHC==7.10.3, GHC==8.0.2, GHC==8.2.1

source-repository head
  type: git
  location: https://github.com/tel/saltine.git

library
  hs-source-dirs:     src
  exposed-modules:
                  Crypto.Saltine
                  Crypto.Saltine.Internal.ByteSizes
                  Crypto.Saltine.Core.SecretBox
                  Crypto.Saltine.Core.AEAD
                  Crypto.Saltine.Core.Box
                  Crypto.Saltine.Core.Stream
                  Crypto.Saltine.Core.Auth
                  Crypto.Saltine.Core.OneTimeAuth
                  Crypto.Saltine.Core.Sign
                  Crypto.Saltine.Core.Hash
                  Crypto.Saltine.Core.ScalarMult
                  Crypto.Saltine.Core.Utils
                  Crypto.Saltine.Class
  other-modules:
                  Crypto.Saltine.Internal.Util

  if os(windows)
    extra-libraries: sodium
  else
    pkgconfig-depends: libsodium >= 1.0.13

  cc-options:         -Wall
  ghc-options:        -Wall -funbox-strict-fields
  default-language:   Haskell2010
  build-depends:
                base >= 4.5 && < 5
              , bytestring
              , profunctors

test-suite tests
  type:    exitcode-stdio-1.0
  main-is: Main.hs
  other-modules:
                AuthProperties
                BoxProperties
                OneTimeAuthProperties
                ScalarMultProperties
                SecretBoxProperties
                SealedBoxProperties
                SignProperties
                StreamProperties
                AEADProperties
                Util
  ghc-options: -Wall -threaded -rtsopts
  hs-source-dirs: tests
  default-language: Haskell2010
  build-depends:
                base >= 4.5 && < 5
              , saltine
              , bytestring
              , QuickCheck
              , test-framework-quickcheck2
              , test-framework
              , semigroups
